# ptouch

./: .gitignore  Cargo.toml  LICENSE  README-ja.org  README.org
etc/udev/rules.d/: 99-brother-ptouch.rules
images/: buppin-layered-demo.txt
src/: backend.rs  element.rs  label.rs  layout.rs  lib.rs  main.rs  printable_image.rs  printer.rs  raster_command.rs  status.rs  tape.rs
tests/: layout_tests.rs  unescape_tests.rs
